@@ -320,11 +320,11 @@ jthreadedRemove(const char *entry)
 
 static int     
 jthreadedSendto(int a, const void* b, size_t c, int d, const struct sockaddr* e,
-		int f, ssize_t *out)
+		socklen_t f, int *out)
 {
 	int rc = 0;
 
-	*out = e ? sendto(a, b, c, d, e, (socklen_t)f) : send(a, b, c, d);
+	*out = e ? sendto(a, b, c, d, e, f) : send(a, b, c, d);
 	if (*out == -1) {
 		rc = errno;
 	}
